--- a/sdk/src/main/res/values-ru/strings.xml
+++ b/sdk/src/main/res/values-ru/strings.xml
@@ -4,6 +4,7 @@
     <string name="agent_name_default">Оператор</string>
     <!-- Надпись к сообщениям клиента -->
     <string name="agent_name_you">Вы</string>
+    <string name="Agent.DisplayName.Deleted">Удаленный оператор</string>
     <!-- Подзаголовок окна чата по умолчанию -->
     <string name="chat_subtitle_placeholder">На связи 24/7!</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что произошел разрыв соединения  с сервером. -->
@@ -16,10 +17,16 @@
     <string name="chat_system_two_agents_typing">%s и %s набирают сообщение...</string>
     <!-- Заголовок окна чата по умолчанию -->
     <string name="chat_title_placeholder">Чат с поддержкой</string>
+    <string name="Chat.System.Media.Preparing">Подготовка файла...</string>
+    <string name="Chat.System.Media.Uploading">Отправка файла...</string>
+    <string name="Chat.System.NewMessages">Новые сообщения</string>
+    <string name="Client.Title">Клиент №%d</string>
     <!-- Общая строка "Отмена" -->
     <string name="common_cancel">Отмена</string>
+    <string name="common_done">Готово</string>
     <!-- Универсальное сообщение о неизвестной ошибке. -->
     <string name="common_unknown_error">Техническая ошибка</string>
+    <string name="Common.Open">Открыть</string>
     <!-- Состояние подключения к сервису -->
     <string name="connection_state_connecting">Подключение…</string>
     <!-- Состояние отсутствия подключения -->
@@ -30,6 +37,10 @@
     <string name="download_status_error">Ошибка</string>
     <!-- Статус загрузки - загрузка -->
     <string name="download_status_loading">Загрузка...</string>
+    <!-- Ошибка загрузки файла, если ссылка устарела. -->
+    <string name="file_download_expired">Ссылка устарела</string>
+    <!-- Проверка ссылки на файл -->
+    <string name="file_link_checking">Проверка...</string>
     <!-- Формат для размера файла в байтах -->
     <string name="format_file_size_b">%.0f Б</string>
     <!-- Формат для размера файла в килобайтах -->
@@ -37,7 +48,7 @@
     <!-- Формат для размера файла в мегабайтах -->
     <string name="format_file_size_mb">%.2f МБ</string>
     <!-- Подсказка в окне ввода сообщения -->
-    <string name="input_message_placeholder">Введите ваше сообщение</string>
+    <string name="input_message_placeholder">Введите ваше сообщение...</string>
     <string name="jivo_business_messenger">Бизнес-месcенджер</string>
     <!-- Надпись на кнопке контекстного меню выбора типа вложения. Нажатие на кнопку открывает системный пикер документов. -->
     <string name="media_upload_attachment_type_selecting_document">Документ</string>
@@ -47,10 +58,16 @@
     <string name="media_upload_select_an_attachment_type_title">Что вы хотите отправить?</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что в данный момент ведётся загрузка файла на сервер. -->
     <string name="media_upload_sending_the_file">Отправка файла</string>
+    <string name="media_uploading_common_error">Ошибка загрузки файла</string>
     <!-- Ошибка, возникающая при неудачной подготовке файла к загрузке. -->
     <string name="media_uploading_extraction_error">Не удалось подготовить файл</string>
     <!-- Превышение лимита выгружаемого файла -->
     <string name="media_uploading_too_large">Размер файла не должен превышать %dМБ</string>
+    <string name="Media.Access.Missing">Разрешите доступ</string>
+    <string name="Media.Access.Suggestion">Для отправки фотографий и видео требуется доступ к галерее.
+
+Пожалуйста, перейдите в [Настройки устройства &gt; Ваше приложение &gt; Фото], чтобы разрешить доступ.</string>
+    <string name="Media.Picker.Camera">Камера</string>
     <!-- Пункт меню "Копировать ссылку" -->
     <string name="menu_action_copy">Копировать ссылку</string>
     <!-- Пункт меню "Cкачать" -->
@@ -61,6 +78,11 @@
     <string name="message_system_operator_accepted">Оператор подключился к диалогу</string>
     <!-- Unsupported file type -->
     <string name="message_unsupported_media">Данный тип файла не поддерживается</string>
+    <string name="Message.Deleted">Сообщение удалено</string>
+    <string name="Message.Edited">(изменено)</string>
+    <string name="Message.Preview.Line">Диалог передан на вторую линию</string>
+    <string name="Message.Sender.You">Вы</string>
+    <string name="notification_message_title">Техподдержка</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Копировать</string>
     <!-- Пункт "Повторить отправку" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
