--- a/sdk/src/main/res/values/strings.xml
+++ b/sdk/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="agent_name_default">Agent</string>
     <!-- Надпись к сообщениям клиента -->
     <string name="agent_name_you">You</string>
+    <string name="Agent.DisplayName.Deleted">Deleted agent</string>
     <!-- Подзаголовок окна чата по умолчанию -->
     <string name="chat_subtitle_placeholder">Chat with us 24/7!</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что произошел разрыв соединения  с сервером. -->
@@ -16,10 +17,16 @@
     <string name="chat_system_two_agents_typing">%s and %s are typing...</string>
     <!-- Заголовок окна чата по умолчанию -->
     <string name="chat_title_placeholder">Report an issue</string>
+    <string name="Chat.System.Media.Preparing">Preparing the file...</string>
+    <string name="Chat.System.Media.Uploading">Sending the file...</string>
+    <string name="Chat.System.NewMessages">New messages</string>
+    <string name="Client.Title">Client #%d</string>
     <!-- Общая строка "Отмена" -->
     <string name="common_cancel">Cancel</string>
+    <string name="common_done">Done</string>
     <!-- Универсальное сообщение о неизвестной ошибке. -->
     <string name="common_unknown_error">Unknown error</string>
+    <string name="Common.Open">Open</string>
     <!-- Состояние подключения к сервису -->
     <string name="connection_state_connecting">Connecting…</string>
     <!-- Состояние отсутствия подключения -->
@@ -30,6 +37,10 @@
     <string name="download_status_error">Error</string>
     <!-- Статус загрузки - загрузка -->
     <string name="download_status_loading">Uploading...</string>
+    <!-- Ошибка загрузки файла, если ссылка устарела. -->
+    <string name="file_download_expired">The link is out of date</string>
+    <!-- Проверка ссылки на файл -->
+    <string name="file_link_checking">Checking...</string>
     <!-- Формат для размера файла в байтах -->
     <string name="format_file_size_b">%.0f B</string>
     <!-- Формат для размера файла в килобайтах -->
@@ -37,7 +48,7 @@
     <!-- Формат для размера файла в мегабайтах -->
     <string name="format_file_size_mb">%.2f MB</string>
     <!-- Подсказка в окне ввода сообщения -->
-    <string name="input_message_placeholder">Enter your message</string>
+    <string name="input_message_placeholder">Type your message...</string>
     <string name="jivo_business_messenger">Business Messenger by</string>
     <!-- Надпись на кнопке контекстного меню выбора типа вложения. Нажатие на кнопку открывает системный пикер документов. -->
     <string name="media_upload_attachment_type_selecting_document">Document</string>
@@ -47,10 +58,16 @@
     <string name="media_upload_select_an_attachment_type_title">What would you like to attach?</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что в данный момент ведётся загрузка файла на сервер. -->
     <string name="media_upload_sending_the_file">Sending the file</string>
+    <string name="media_uploading_common_error">Failed to upload the file</string>
     <!-- Ошибка, возникающая при неудачной подготовке файла к загрузке. -->
     <string name="media_uploading_extraction_error">Failed to prepare the file</string>
     <!-- Превышение лимита выгружаемого файла -->
     <string name="media_uploading_too_large">File size must not exceed %dMB</string>
+    <string name="Media.Access.Missing">Please Allow Access</string>
+    <string name="Media.Access.Suggestion">JivoChat needs access to your photo library to send photos and videos.
+
+Please go to [Settings &gt; App &gt; Photos] to give access.</string>
+    <string name="Media.Picker.Camera">Camera</string>
     <!-- Пункт меню "Копировать ссылку" -->
     <string name="menu_action_copy">Copy link</string>
     <!-- Пункт меню "Cкачать" -->
@@ -61,6 +78,10 @@
     <string name="message_system_operator_accepted">Agent joined the chat</string>
     <!-- Unsupported file type -->
     <string name="message_unsupported_media">This file type is not supported</string>
+    <string name="Message.Deleted">Message was deleted</string>
+    <string name="Message.Edited">(edited)</string>
+    <string name="Message.Preview.Line">The chat was transferred to the second line</string>
+    <string name="Message.Sender.You">You</string>
     <string name="notification_channel_message_description">Message from Jivo SDK</string>
     <string name="notification_channel_message_name">Jivo</string>
     <!-- Format for text message where $1 is agent name, $2 - text message -->
