--- a/sdk/src/main/res/values-es/strings.xml
+++ b/sdk/src/main/res/values-es/strings.xml
@@ -7,6 +7,8 @@
     <string name="Agent.DisplayName.Deleted">Agente borrado</string>
     <!-- Подзаголовок окна чата по умолчанию -->
     <string name="chat_subtitle_placeholder">Chatee con nosotros 24/7</string>
+    <!-- Системное сообщение в ленте чата, говорящее о том, что произошел разрыв соединения  с сервером. -->
+    <string name="chat_system_disconnected">Código de error de red: %d , mensaje de error: %s</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что в данный момент несколько агентов набирают сообщение. -->
     <string name="chat_system_few_agents_typing">%s, %s y +%d están escribiendo...</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что в данный момент один агент набирает сообщение. -->
@@ -35,6 +37,14 @@
     <string name="download_status_error">Error</string>
     <!-- Статус загрузки - загрузка -->
     <string name="download_status_loading">Cargando...</string>
+    <!-- Ошибка загрузки файла, если ссылка устарела. -->
+    <string name="file_download_expired">El link ha expirado</string>
+    <!-- Message letting user know that file is unavailable for download. -->
+    <string name="file_download_unavailable">Archivo no disponible</string>
+    <!-- Проверка ссылки на файл -->
+    <string name="file_link_checking">Comprobando ...</string>
+    <!-- Default file name -->
+    <string name="file_name_unknown">Archivo sin título</string>
     <!-- Формат для размера файла в байтах -->
     <string name="format_file_size_b">%.0f B</string>
     <!-- Формат для размера файла в килобайтах -->
@@ -62,6 +72,10 @@
 
 Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</string>
     <string name="Media.Picker.Camera">Cámara</string>
+    <!-- Пункт меню "Копировать ссылку" -->
+    <string name="menu_action_copy">Copiar link</string>
+    <!-- Пункт меню "Cкачать" -->
+    <string name="menu_action_download">Descargar</string>
     <!-- Кнопка скачать для прикрепленного документа/файла -->
     <string name="message_download">Descargar</string>
     <!-- Системное сообщение о присоединении оператора к чату -->
@@ -72,6 +86,7 @@ Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</stri
     <string name="Message.Edited">(editado)</string>
     <string name="Message.Preview.Line">El chat fue transferido a la segunda linea</string>
     <string name="Message.Sender.You">Usted</string>
+    <string name="notification_channel_message_description">Mensaje de Jivo SDK</string>
     <string name="notification_message_title">Apoyo</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Copiar</string>
