--- a/sdk/src/main/res/values-tr/strings.xml
+++ b/sdk/src/main/res/values-tr/strings.xml
@@ -7,6 +7,8 @@
     <string name="Agent.DisplayName.Deleted">Silinmiş temsilci</string>
     <!-- Подзаголовок окна чата по умолчанию -->
     <string name="chat_subtitle_placeholder">Bize 7/24 danışabilirsiniz!</string>
+    <!-- Системное сообщение в ленте чата, говорящее о том, что произошел разрыв соединения  с сервером. -->
+    <string name="chat_system_disconnected">Ağ hata kodu: %d , hata mesajı: %s</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что в данный момент несколько агентов набирают сообщение. -->
     <string name="chat_system_few_agents_typing">%s, %s ve %d kişi daha yazıyor...</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что в данный момент один агент набирает сообщение. -->
@@ -35,6 +37,14 @@
     <string name="download_status_error">Hata</string>
     <!-- Статус загрузки - загрузка -->
     <string name="download_status_loading">Yükleniyor...</string>
+    <!-- Ошибка загрузки файла, если ссылка устарела. -->
+    <string name="file_download_expired">Bağlantı süresi doldu</string>
+    <!-- Message letting user know that file is unavailable for download. -->
+    <string name="file_download_unavailable">Dosya mevcut değil</string>
+    <!-- Проверка ссылки на файл -->
+    <string name="file_link_checking">Denetleniyor ...</string>
+    <!-- Default file name -->
+    <string name="file_name_unknown">Adsız dosya</string>
     <!-- Формат для размера файла в байтах -->
     <string name="format_file_size_b">%.0f B</string>
     <!-- Формат для размера файла в килобайтах -->
@@ -62,6 +72,10 @@
 
 Lütfen [Ayarlar &gt; App &gt; Fotoğraflar] yoluyla izin verin.</string>
     <string name="Media.Picker.Camera">Kamera</string>
+    <!-- Пункт меню "Копировать ссылку" -->
+    <string name="menu_action_copy">Linki kopyala</string>
+    <!-- Пункт меню "Cкачать" -->
+    <string name="menu_action_download">İndir</string>
     <!-- Кнопка скачать для прикрепленного документа/файла -->
     <string name="message_download">İndir</string>
     <!-- Системное сообщение о присоединении оператора к чату -->
@@ -72,6 +86,7 @@ Lütfen [Ayarlar &gt; App &gt; Fotoğraflar] yoluyla izin verin.</string>
     <string name="Message.Edited">(düzenlendi)</string>
     <string name="Message.Preview.Line">Sohbet ikincil hatta aktarıldı</string>
     <string name="Message.Sender.You">Ben</string>
+    <string name="notification_channel_message_description">Jivo SDK\'dan mesaj</string>
     <string name="notification_message_title">Yardım</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Kopyala</string>
