MOB-3886: add offline message

--- a/sdk/src/main/res/values-es/strings.xml
+++ b/sdk/src/main/res/values-es/strings.xml
@@ -5,6 +5,11 @@
     <!-- Надпись к сообщениям клиента -->
     <string name="agent_name_you">Usted</string>
     <string name="Agent.DisplayName.Deleted">Agente borrado</string>
+    <!-- Normally user iOS device doesn't return "Restricted" camera access status. But for test purposes we've added an alert with this string message anyway. -->
+    <string name="Camera.Access.Restricted">Acceso a la cámara denegado</string>
+    <string name="Camera.Access.Suggestion">Necesitamos permiso para acceder a la cámara para que pueda tomar fotos</string>
+    <!-- Alert with this message displays when you try to take a photo from camera on iOS simulator or when real device experiencing some technical issues. -->
+    <string name="Camera.Access.Unavailable">La cámara no está disponible</string>
     <!-- Подзаголовок окна чата по умолчанию -->
     <string name="chat_subtitle_placeholder">Chatee con nosotros 24/7</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что произошел разрыв соединения  с сервером. -->
@@ -45,6 +50,7 @@
     <string name="file_link_checking">Comprobando ...</string>
     <!-- Default file name -->
     <string name="file_name_unknown">Archivo sin título</string>
+    <string name="file_transfer_disabled">Transferencia de archivos inhabilitada</string>
     <!-- Формат для размера файла в байтах -->
     <string name="format_file_size_b">%.0f B</string>
     <!-- Формат для размера файла в килобайтах -->
@@ -87,11 +93,21 @@ Por favor vaya a [Configuración &gt; App &gt; Fotos] para dar el permiso.</stri
     <string name="Message.Preview.Line">El chat fue transferido a la segunda linea</string>
     <string name="Message.Sender.You">Usted</string>
     <string name="notification_channel_message_description">Mensaje de Jivo SDK</string>
+    <string name="notification_channel_message_name">Jivo</string>
+    <!-- Format for text message where $1 is agent name, $2 - text message -->
+    <string name="notification_message_text_format">%1$s: %2$s</string>
     <string name="notification_message_title">Apoyo</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Copiar</string>
     <!-- Пункт "Повторить отправку" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_resend">Reenviar</string>
+    <!--
+  Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway.
+  If there is an error then the alert should be displayed on photo library access try when starting to pick images.
+  -->
+    <string name="PhotoLibrary.Access.NoAvailableImages">No hay imágenes disponibles</string>
+    <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
+    <string name="PhotoLibrary.Access.Unavailable">La biblioteca de fotos no está disponible</string>
     <string name="toast_copied_to_clipboard">Copiado</string>
     <!-- Приветственное сообщение для пустого чата -->
     <string name="welcome_message_placeholder">Contacte con nuestro equipo de soporte y díganos si hay algún bug que podamos reparar</string>
