--- a/sdk/src/main/res/values-tr/strings.xml
+++ b/sdk/src/main/res/values-tr/strings.xml
@@ -5,6 +5,11 @@
     <!-- Надпись к сообщениям клиента -->
     <string name="agent_name_you">Ben</string>
     <string name="Agent.DisplayName.Deleted">Silinmiş temsilci</string>
+    <!-- Normally user iOS device doesn't return "Restricted" camera access status. But for test purposes we've added an alert with this string message anyway. -->
+    <string name="Camera.Access.Restricted">Kamera erişimi reddedildi</string>
+    <string name="Camera.Access.Suggestion">Fotoğraf çekip paylaşabilmeniz için bu izne ihtiyacımız var</string>
+    <!-- Alert with this message displays when you try to take a photo from camera on iOS simulator or when real device experiencing some technical issues. -->
+    <string name="Camera.Access.Unavailable">Kamera kullanılamıyor</string>
     <!-- Подзаголовок окна чата по умолчанию -->
     <string name="chat_subtitle_placeholder">Bize 7/24 danışabilirsiniz!</string>
     <!-- Системное сообщение в ленте чата, говорящее о том, что произошел разрыв соединения  с сервером. -->
@@ -45,6 +50,7 @@
     <string name="file_link_checking">Denetleniyor ...</string>
     <!-- Default file name -->
     <string name="file_name_unknown">Adsız dosya</string>
+    <string name="file_transfer_disabled">Dosya aktarımı devre dışı bırakıldı</string>
     <!-- Формат для размера файла в байтах -->
     <string name="format_file_size_b">%.0f B</string>
     <!-- Формат для размера файла в килобайтах -->
@@ -87,11 +93,21 @@ Lütfen [Ayarlar &gt; App &gt; Fotoğraflar] yoluyla izin verin.</string>
     <string name="Message.Preview.Line">Sohbet ikincil hatta aktarıldı</string>
     <string name="Message.Sender.You">Ben</string>
     <string name="notification_channel_message_description">Jivo SDK\'dan mesaj</string>
+    <string name="notification_channel_message_name">Jivo</string>
+    <!-- Format for text message where $1 is agent name, $2 - text message -->
+    <string name="notification_message_text_format">%1$s: %2$s</string>
     <string name="notification_message_title">Yardım</string>
     <!-- Пункт "Копировать" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_copy">Kopyala</string>
     <!-- Пункт "Повторить отправку" контекстного меню, вызываемого долгим тапом по бабблу сообщения. -->
     <string name="options_resend">Tekrar gönder</string>
+    <!--
+  Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway.
+  If there is an error then the alert should be displayed on photo library access try when starting to pick images.
+  -->
+    <string name="PhotoLibrary.Access.NoAvailableImages">Kullanılabilir resim yok</string>
+    <!-- Normally an alert with this message shouldn't be displayed but for test purposes it was added to SDK anyway -->
+    <string name="PhotoLibrary.Access.Unavailable">Fotoğraf kitaplığı kullanılamıyor</string>
     <string name="toast_copied_to_clipboard">Kopyalandı</string>
     <!-- Приветственное сообщение для пустого чата -->
     <string name="welcome_message_placeholder">Destek ekibimize yazın ve karşılaştığınız hataları bize iletin</string>
